tests/miniJava/neg/006701_mutation.MiniJava
class java { public static void return Main ( String [ ] java ) { { } } }
